Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86702

Some GIFs don't load/play anymore in Qt apps I tested

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.12.10, 5.15.2
    • 5.12.9, 5.15.1
    • Image formats
    • None
    • Linux/X11, Windows
    • f1c1f444811643acda66aaeb21a9e73a8e60e830 (qt/qtbase/dev) 9769e43e34b56937100f7b27b4c12d48585e2db9 (qt/qtbase/5.15) 69eade9854a049e64904e00faf34fe8931510f02 (qt/qtbase/5.12)

      In gwenview, nomacs, and lximage-qt (the three Qt apps I've tested so far), some GIFs don't load anymore, but used to not long ago.

      I've noticed my issue seems to crop up with GIFs that use combine and have a small number of frames - mine were 6-13 frames. In the ones with 6-7 frames, the image didn't load at all (the error is not specific as to why it can't be loaded). The one with 12 frames (see below) just didn't play past the first or second frame.

      The failure to load at all also occurred once with a GIF with a larger number of frames (99 plus background) but was greatly variable in how long each frame lasted, had some frames with

      (!)

      at the end of the layer name (I couldn't find info on what this means) and also used combine.

      All of the problem GIFs play fine in Firefox and Eye of Gnome.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            yaomtc Yao Mitachi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes